--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --mode development --open",
+    "test": "jest",
+    "test-watch": "jest --watchAll",
+    "start": "webpack serve --mode development --open ",
     "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.22.9",
+    "babel-jest": "^27.5.1",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^27.5.1",
     "webpack": "^5.88.2",
@@ -21,6 +24,7 @@
   "dependencies": {
     "@babel/core": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
-    "babel-loader": "^9.1.3"
+    "babel-loader": "^9.1.3",
+    "jest-babel": "^1.0.1"
   }
 }
