--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "devDependencies": {
     "@babel/core": "^7.22.9",
     "babel-jest": "^27.5.1",
+    "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^27.5.1",
+    "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.15.1"
@@ -25,6 +27,7 @@
     "@babel/core": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
     "babel-loader": "^9.1.3",
-    "jest-babel": "^1.0.1"
+    "jest-babel": "^1.0.1",
+    "node-fetch": "^2.7.0"
   }
 }
